--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
-#slider{
+#slider {
     padding: 25% 0;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    opacity: 0.9;
+}
+header>p {
+    font-size: 30px;
+    color: floralwhite;
+}
+.images img {
+    height: 200px;
+    width: 200px;
+    padding: 1%;
 }
